jobs search and other regulat changes

--- a/templates/header.html.twig
+++ b/templates/header.html.twig
@@ -49,7 +49,7 @@
                                 <a href="/">Home</a>
                             </li>
                             <li>
-                                <a href="#">Jobs</a>
+                                <a href="/search">Jobs</a>
                             </li>
                             <li>
                                 <a href="{{ path('_aboutus') }}">About Us</a>
