--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -76,6 +76,7 @@
                                     </div>
                                     <div class="select">
                                         <input type="text" placeholder="City, province or region" name="location"
+                                               onkeydown="initMap(this);"
                                                id="location" style="height: 60px;background-color: white;"/>
                                         <input type="hidden" name="latitude" id="latitude" value=""/>
                                         <input type="hidden" name="longitude" id="longitude" value=""/>
@@ -397,25 +398,25 @@
                 <div class="col-md-3 col-6">
                     <div class="single-fun-factor">
                         <h1 style="color: black"><span class="counter">100</span> +</h1>
-                        <h3 style="color: black">Customers</h3>
+                        <h3 style="color: black">Jobseekers</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="single-fun-factor">
-                        <h1 style="color: red"><span class="counter">129</span> +</h1>
-                        <h3 style="color: red">members</h3>
+                        <h1 style="color: red"><span class="counter">150</span> +</h1>
+                        <h3 style="color: red">Company</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="single-fun-factor">
-                        <h1 style="color: black"><span class="counter">55</span></h1>
-                        <h3 style="color: black">Resume</h3>
+                        <h1 style="color: black"><span class="counter">1</span></h1>
+                        <h3 style="color: black">Skillsfarm Site</h3>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="single-fun-factor">
-                        <h1 style="color: blue"><span class="counter">120</span></h1>
-                        <h3 style="color: blue">Company</h3>
+                        <h1 style="color: blue"><span class="counter">240</span>+</h1>
+                        <h3 style="color: blue">Resume</h3>
                     </div>
                 </div>
             </div>
