--- a/templates/employer/login.html.twig
+++ b/templates/employer/login.html.twig
@@ -1,7 +1,7 @@
 {% extends "employerbase.html.twig" %}
 {% block title %}Skillsfarm - Recruiter{% endblock %}
 {% block body %}
-    <section class="module bg-dark-30" data-background="/assets/images/section-4.jpg">
+    <section class="module bg-dark-30" data-background="/img/desk_1.jpg">
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-sm-offset-3">
@@ -16,14 +16,16 @@
                 <div class="col-sm-5 col-sm-offset-1 mb-sm-40">
                     <h4 class="font-alt">Login</h4>
                     <hr class="divider-w mb-10">
-                    <form class="form">
+                    <form action="{{ path('_employer_login') }}" method="post">
                         <div class="form-group">
-                            <input class="form-control" id="username" type="text" name="username"
-                                   placeholder="Username"/>
+                            <input type="text" id="username" class="form-control" name="_username"
+                                   placeholder="Username"
+                                   required
+                                   value="{% if last_username is defined %}{{ last_username }}{% endif %}"/>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" id="password" type="password" name="password"
-                                   placeholder="Password"/>
+                            <input type="password" class="form-control" id="password" name="_password"
+                                   placeholder="Password" required/>
                         </div>
                         <div class="form-group">
                             <button class="btn btn-round btn-b">Login</button>
@@ -34,28 +36,40 @@
                 <div class="col-sm-5">
                     <h4 class="font-alt">Register</h4>
                     <hr class="divider-w mb-10">
-                    <form class="form">
+                    <form action="{{ path('_employer_signup') }}" method="post">
                         <div class="form-group">
-                            <input class="form-control" id="E-mail" type="text" name="email" placeholder="Email"/>
+                            <input class="form-control" id="email" type="text" name="email" placeholder="Email"
+                                   required/>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" id="username" type="text" name="username"
-                                   placeholder="Username"/>
+                            <input class="form-control" id="name" type="text" name="name" placeholder="Name" required/>
                         </div>
                         <div class="form-group">
-                            <input class="form-control" id="password" type="password" name="password"
-                                   placeholder="Password"/>
+                            <input class="form-control" id="login" type="text" name="login"
+                                   placeholder="Username" required/>
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control" id="pass" type="password" name="pass"
+                                   placeholder="Password" required/>
                         </div>
                         <div class="form-group">
                             <input class="form-control" id="re-password" type="password" name="re-password"
-                                   placeholder="Re-enter Password"/>
+                                   placeholder="Re-enter Password" required/>
                         </div>
                         <div class="form-group">
-                            <button class="btn btn-block btn-round btn-b">Register</button>
+                            <button type="submit" class="btn btn-block btn-round btn-b">Register</button>
                         </div>
                     </form>
                 </div>
             </div>
         </div>
     </section>
+{% endblock %}
+{% block javascripts %}
+<script>
+    {% if message != '' %}
+    $('#snackbar').html('{{ message }}');
+    showtoast();
+    {% endif %}
+</script>
 {% endblock %}
