--- a/templates/employerfooter.html.twig
+++ b/templates/employerfooter.html.twig
@@ -3,56 +3,48 @@
         <div class="row">
             <div class="col-sm-3">
                 <div class="widget">
-                    <h5 class="widget-title font-alt">About Titan</h5>
-                    <p>The languages only differ in their grammar, their pronunciation and their most common words.</p>
-                    <p>Phone: +1 234 567 89 10</p>Fax: +1 234 567 89 10
-                    <p>Email:<a href="#">somecompany@example.com</a></p>
-                </div>
-            </div>
-            <div class="col-sm-3">
-                <div class="widget">
-                    <h5 class="widget-title font-alt">Recent Comments</h5>
+                    <h5 class="widget-title font-alt">GET IN TOUCH</h5>
                     <ul class="icon-list">
-                        <li>Maria on <a href="#">Designer Desk Essentials</a></li>
-                        <li>John on <a href="#">Realistic Business Card Mockup</a></li>
-                        <li>Andy on <a href="#">Eco bag Mockup</a></li>
-                        <li>Jack on <a href="#">Bottle Mockup</a></li>
-                        <li>Mark on <a href="#">Our trip to the Alps</a></li>
+                        <li>Email: skillsfarmindia@gmail.com</li>
+                        <li>Phone: +91 9945594954</li>
+                        <li>URL: skillsfarm.in</li>
+                        <li>Gottigere, Bangalore</li>
                     </ul>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="widget">
-                    <h5 class="widget-title font-alt">Blog Categories</h5>
+                    <h5 class="widget-title font-alt">By Regions</h5>
                     <ul class="icon-list">
-                        <li><a href="#">Photography - 7</a></li>
-                        <li><a href="#">Web Design - 3</a></li>
-                        <li><a href="#">Illustration - 12</a></li>
-                        <li><a href="#">Marketing - 1</a></li>
-                        <li><a href="#">Wordpress - 16</a></li>
+                        <li><a href="#">Banglore</a></li>
+                        <li><a href="#">Hassan</a></li>
+                        <li><a href="#">Karkala</a></li>
+                        <li><a href="#">Mangalore</a></li>
+                        <li><a href="#">Kundapura</a></li>
                     </ul>
                 </div>
             </div>
             <div class="col-sm-3">
                 <div class="widget">
-                    <h5 class="widget-title font-alt">Popular Posts</h5>
-                    <ul class="widget-posts">
-                        <li class="clearfix">
-                            <div class="widget-posts-image"><a href="#"><img src="/assets/images/rp-1.jpg"
-                                                                             alt="Post Thumbnail"/></a></div>
-                            <div class="widget-posts-body">
-                                <div class="widget-posts-title"><a href="#">Designer Desk Essentials</a></div>
-                                <div class="widget-posts-meta">23 january</div>
-                            </div>
-                        </li>
-                        <li class="clearfix">
-                            <div class="widget-posts-image"><a href="#"><img src="/assets/images/rp-2.jpg"
-                                                                             alt="Post Thumbnail"/></a></div>
-                            <div class="widget-posts-body">
-                                <div class="widget-posts-title"><a href="#">Realistic Business Card Mockup</a></div>
-                                <div class="widget-posts-meta">15 February</div>
-                            </div>
-                        </li>
+                    <h5 class="widget-title font-alt">Job Types</h5>
+                    <ul class="icon-list">
+                        <li><a href="#">Full Time Job</a></li>
+                        <li><a href="#">Part Time Job</a></li>
+                        <li><a href="#">Temporary Job</a></li>
+                        <li><a href="#">Internship Job</a></li>
+                        <li><a href="#">Developer</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="widget">
+                    <h5 class="widget-title font-alt">Job Catogories</h5>
+                    <ul class="icon-list">
+                        <li><a href="#">Soft Skills</a></li>
+                        <li><a href="#">Career Counselling</a></li>
+                        <li><a href="#">Communication Skills</a></li>
+                        <li><a href="#">Faculty Training</a></li>
+                        <li><a href="#">Placement services</a></li>
                     </ul>
                 </div>
             </div>
@@ -64,7 +56,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                <p class="copyright font-alt">&copy; 2017&nbsp;<a href="index.html">TitaN</a>, All Rights Reserved</p>
+                <p class="copyright font-alt">&copy; 2018&nbsp;<a href="/">Skillsfarm</a>, All Rights Reserved</p>
             </div>
             <div class="col-sm-6">
                 <div class="footer-social-links"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i
