--- a/templates/home/aboutus.html.twig
+++ b/templates/home/aboutus.html.twig
@@ -6,7 +6,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="breadcrumb-text">
+                    <div class="breadcrumb-text" style="padding-left: 42%;">
                         <h2 class="text-center">About Us</h2>
                         <div class="breadcrumb-bar">
                             <ul class="breadcrumb text-center m-0">
