--- a/templates/jobseeker/editProfile.html.twig
+++ b/templates/jobseeker/editProfile.html.twig
@@ -5,7 +5,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <div class="breadcrumb-text">
+                 <div class="breadcrumb-text" style="padding-left: 42%;">
                         <h2 class="text-center">Create Profile</h2>
                         <div class="breadcrumb-bar">
                             <ul class="breadcrumb text-center m-0">
