--- a/public/style.css
+++ b/public/style.css
@@ -1178,3 +1178,7 @@ p.panel-title {
   from {bottom: 30px; opacity: 1;}
   to {bottom: 0; opacity: 0;}
 }
+
+.address:hover {
+  cursor: pointer;
+}
