--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -11,8 +11,8 @@
                     <img src="/img/loading1.gif" id="notify-loader"
                          style="width: 100px;height: 73px;display: none;margin-left: 30%;"/>
                     <div class="subscribe-form" id="notify-span">
-                            <input type="email" name="email" id="email" placeholder="Enter Your Email.....">
-                            <button onclick="submitnotify();">Submit</button>
+                        <input type="email" name="email" id="email" placeholder="Enter Your Email.....">
+                        <button onclick="submitnotify();">Submit</button>
                     </div>
                 </div>
             </div>
@@ -34,11 +34,11 @@
                     <div class="single-footer-widget">
                         <h3 class="text-white mb-21">By Regions</h3>
                         <ul class="footer-list">
-                            <li><a href="#">Banglore</a></li>
-                            <li><a href="#">Hassan</a></li>
-                            <li><a href="#">Karkala</a></li>
-                            <li><a href="#">Mangalore</a></li>
-                            <li><a href="#">Kundapura</a></li>
+                            <li><a href="javascript:searchforJobsin('Bangalore')">Banglore</a></li>
+                            <li><a href="javascript:searchforJobsin('Chennai')">Chennai</a></li>
+                            <li><a href="javascript:searchforJobsin('Hyderabad')">Hyderabad</a></li>
+                            <li><a href="javascript:searchforJobsin('Mumbai')">Mumbai</a></li>
+                            <li><a href="javascript:searchforJobsin('Delhi')">Delhi</a></li>
                         </ul>
                     </div>
                 </div>
@@ -46,11 +46,11 @@
                     <div class="single-footer-widget">
                         <h3 class="text-white mb-21">Job Types</h3>
                         <ul class="footer-list">
-                            <li><a href="#">Full Time Job</a></li>
-                            <li><a href="#">Part Time Job</a></li>
-                            <li><a href="#">Temporary Job</a></li>
-                            <li><a href="#">Internship Job</a></li>
-                            <li><a href="#">Developer</a></li>
+                            <li><a href="javascript:searchforJobsin('Bangalore')">Full Time Job</a></li>
+                            <li><a href="javascript:searchforJobsin('Bangalore')">Part Time Job</a></li>
+                            <li><a href="javascript:searchforJobsin('Bangalore')">Temporary Job</a></li>
+                            <li><a href="javascript:searchforJobsin('Bangalore')">Internship Job</a></li>
+                            <li><a href="javascript:searchforJobsin('Bangalore')">Work From Home</a></li>
                         </ul>
                     </div>
                 </div>
