--- a/templates/home/jobdescription.html.twig
+++ b/templates/home/jobdescription.html.twig
@@ -5,43 +5,68 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                        <div class="single-job-content">
-                            <div class="area-title">
-                                <div class="single-job-post">
-                                    <div class="img-icon">
-                                        <img src="images/company-logo/1.png" alt="">
-                                    </div>
-                                    <div class="address">
-                                        <h6>{{ job.vcshortheadline }}</h6>
-                                        <p>at : {{ job.vclocationdetails }}</p>
-                                        <p>Category : </p>
-                                        <p>Date : {{ job.dtlivedate  | date('F jS Y')  }}</p>
-                                    </div>
-                                    <div class="button-box"><a href="/apply/{{ job.id }}" class="button button-black">APPLY NOW</a></div>
+                    <div class="single-job-content">
+                        <div class="area-title">
+                            <div class="single-job-post">
+                                <div class="img-icon">
+                                    <img src="images/company-logo/1.png" alt="">
                                 </div>
-                            </div>
-                            <div class="title"><span>job description</span></div>
-                            <div class="single-job-form">
-                                <p>{{ job.vcdescription }} </p>
-                            </div>
-                            <div class="title"><span>Qualities</span></div>
-                            <div class="single-job-form">
-                                <div class="single-info mb-14">
-                                    <span class="mark-icon block pl-27">{{ job.vcqualifications }}</span>
+                                <div class="address">
+                                    <h6>{{ job.vcshortheadline }}</h6>
+                                    <p><i class="fa fa-map-marker"></i> {{ job.vclocationdetails }}</p>
+                                    <p>Category : </p>
+                                    <p>Date : {{ job.dtlivedate  | date('F jS Y') }}</p>
                                 </div>
-                            </div>
-                            <div class="title"><span>how to apply</span></div>
-                            <div class="single-job-form">
-                                <p>Kindly fill the upcoming form and then our team would be pleased to help you with the job</p>
-                            </div>
-                            <div class="buttonback">
-                                <a href="/apply/{{ job.id }}" class="button button-large-box lg-btn mr-20">Apply now</a>
-                                <a href="/" class="button button-large-box lg-btn mr-20">Back</a>
+                                <div class="button-box"><a href="/apply/{{ job.id }}" class="button button-black">APPLY
+                                        NOW</a></div>
                             </div>
                         </div>
+                        <div class="title"><span>job description</span></div>
+                        <div class="single-job-form">
+                            <p>{{ job.vcdescription }} </p>
+                        </div>
+                        <div class="title"><span>Qualities</span></div>
+                        <div class="single-job-form">
+                            <div class="single-info mb-14">
+                                <span class="mark-icon block pl-27">{{ job.vcqualifications }}</span>
+                            </div>
+                        </div>
+                        <div class="title"><span>Experience</span></div>
+                        <div class="single-job-form">
+                            <div class="single-info mb-14">
+                                {% if job.vcexperience is not null %}
+                                <span class="mark-icon block pl-27">{{ job.vcexperience }}</span>
+                                {%  endif %}
+                            </div>
+                        </div>
+
+                        <div class="title"><span>Salary Descriptions</span></div>
+                        <div class="single-job-form">
+                            <div class="single-info mb-14">
+                                {% if job.vcannualctc is not null %}
+                                    <span class="mark-icon block pl-27">Annual Salary : {{ job.vcannualctc }}</span>
+                                {% endif %}
+                                {% if job.vcallowances is not null %}
+                                    <span class="mark-icon block pl-27">Allowances : {{ job.vcallowances }}</span>
+                                {% endif %}
+                                {% if job.vcsalarydescription is not null %}
+                                    <span class="mark-icon block pl-27">Other Details : {{ job.vcsalarydescription }}</span>
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="title"><span>how to apply</span></div>
+                    <div class="single-job-form">
+                        <p>Kindly fill the upcoming form and then our team would be pleased to help you with the job</p>
+                    </div>
+                    <div class="buttonback">
+                        <a href="/" class="button button-large-box lg-btn mr-20">Back</a>
+                        <a href="/apply/{{ job.id }}" class="button button-large-box lg-btn mr-20">Apply now</a>
+                    </div>
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
 
