changes in ui and fixes

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,5 +1,6 @@
 <html class="no-js" lang="en">
 <head>
+    {{ sonata_seo_metadatas() }}
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>
