--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -108,14 +108,12 @@
             </div>
         </div>
     </div>
-
     <div class="job-categroy-area ptb-130 ptb-sm-60">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title text-center ">
-                        <h2>Categories</h2>
-                        <p>jobs...</p>
+                        <h2>Job Categories</h2>
                     </div>
                 </div>
             </div>
